# atomstudio

./: .gitignore  pyproject.toml
addon/atomstudio_addon/: __init__.py  operators.py  panel.py
configs/examples/: handdrawn_surface_v2.yaml  water_single.yaml
docs/: app-refactor-design.md  opengl-preview-backend.md
examples/: legacy_graph_render.py  mgo111_adsorbates.xyz
output/: effects_smoke.yaml  job_report.json  pt_water_studio_batch.yaml  pt_water_studio_highkey_4096.yaml  pt_water_studio_highkey_darkbg_4096.yaml  pt_water_studio_highkey_darkbg_sunbeam_4096.yaml  pt_water_studio_three_reference.yaml
scripts/: blender_style_spheres.py  bpy_oneclick_stylized_render.py  build_2d_metal_defects_emt.py  build_addon_zip.sh  build_frenkel_pair_1to1.py  build_ptni111_adsorbates.py  defect_relaxation.py  demo_defect_relaxation_solver.py  extract_frenkel_coords_from_image.py  generate_model_development_ppt.js  make_perovskite_srtio3.py  opengl_shader_style_preview.py  opengl_water_demo.py  render_common_molecule_collage.py  render_frenkel_pair_cartoon.py  update_golden_hashes.py
src/atomstudio/: __init__.py  cli.py  color_utils.py  paths.py  visual_defaults.py
src/atomstudio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/data/: md.traj  silicon.cif  water.xyz
tests/golden/: test_visual_regression.py
tests/integration/: test_headless_blender.py
tests/unit/: test_app_menus.py  test_app_qt_runtime.py  test_app_state.py  test_app_toolbars.py  test_app_window.py  test_app_workers.py  test_ase_loader.py  test_ase_view.py  (+34 more)
(+119 files in other folders)
