[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atomstudio"
version = "0.1.0"
description = "ASE to Blender rendering toolkit"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "atomstudio contributors"}]
dependencies = [
  "ase>=3.27.0",
  "numpy>=1.26",
  "PyYAML>=6.0",
  "scipy>=1.8.1",
]

[project.scripts]
atomstudio = "atomstudio.cli:main"

[project.optional-dependencies]
gui = [
  "PySide6>=6.7",
  "vispy>=0.14",
  "PyOpenGL>=3.1.7",
]
test = [
  "pytest>=8.0",
  "pillow>=10.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "integration: integration tests that require blender",
  "golden: visual regression tests",
]
